force-app/main/default/objects/Property__c/fields/AnnualPropertyTax__c.field-meta.xml
<CustomField>
    <fullName>AnnualPropertyTax__c</fullName>
    <description>Annual Property tax</description>
    <label>Annual Property Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>