force-app/main/default/objects/Property__c/fields/ManufacturedHome__c.field-meta.xml
<CustomField>
    <fullName>ManufacturedHome__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the property a manufactured home?</description>
    <label>Is the property a manufactured home?</label>
    <type>Checkbox</type>
</CustomField>