force-app/main/default/objects/Property__c/fields/MixedUseProperty__c.field-meta.xml
<CustomField>
    <fullName>MixedUseProperty__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >If you will occupy the property, will you set aside space within the property to operate your own business?</description>
    <label>Operate your own business?</label>
    <type>Checkbox</type>
</CustomField>