force-app/main/default/objects/Property__c/fields/NoOfUnits__c.field-meta.xml
<CustomField>
    <fullName>NoOfUnits__c</fullName>
    <description>Number of Units</description>
    <label>NoOfUnits</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>