force-app/main/default/objects/Property__c/fields/OriginalPurchasePrice__c.field-meta.xml
<CustomField>
    <fullName>OriginalPurchasePrice__c</fullName>
    <description>Original Purchase Price of the property</description>
    <label>Original Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>