force-app/main/default/objects/Property__c/fields/PropertyUnits__c.field-meta.xml
<CustomField>
    <fullName>PropertyUnits__c</fullName>
    <description>Property Units</description>
    <label>Property Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <label>Single-Family</label>
                <fullName>SingleFamily</fullName>
            </value>
            <value>
                <label>Multi-Family</label>
                <fullName>MultiFamily</fullName>
            </value>
            <value>
                <label>Condominium</label>
                <fullName>Condominium</fullName>
            </value>
            <value>
                <label>Townhouse</label>
                <fullName>Townhouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>