force-app/main/default/objects/Property__c/fields/PropertyValue__c.field-meta.xml
<CustomField>
    <fullName>PropertyValue__c</fullName>
    <description>Current Property Value</description>
    <label>Property Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>