force-app/main/default/objects/Property__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State of the property</description>
    <label>State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>