force-app/main/default/objects/Property__c/fields/Year_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Year_Purchased__c</fullName>
    <description>Year purchased of the property</description>
    <label>Year Purchased</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>