force-app/main/default/objects/Property__c/fields/YearPurchased__c.field-meta.xml
<CustomField>
    <fullName>YearPurchased__c</fullName>
    <description>Year purchased of the property</description>
    <label>YearPurchased</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>