force-app/main/default/objects/Property__c/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <description>Zipcode of the property</description>
    <label>ZipCode</label>
    <length>11</length>
    <type>Text</type>
</CustomField>